--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run build:css && nodemon ./bin/www",
-    "build:css": "postcss public/stylesheets/tailwind.css -o public/stylesheets/style.css"
+    "start": "snowpack dev"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,7 +16,9 @@
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
+    "@snowpack/plugin-postcss": "^1.4.3",
     "autoprefixer": "^10.4.0",
-    "postcss-cli": "^9.0.2"
+    "postcss-cli": "^9.0.2",
+    "snowpack": "^3.8.8"
   }
 }
