--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "snowpack dev"
+    "start": "snowpack dev",
+    "build": "snowpack build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
